src/components/NewProjectModal/NewProjectModal.module.css
.divider {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 8px;
  margin-block: 20px;
  color: var(--secondary);
  text-transform: uppercase;

  &:before,
  &:after {
    content: '';
    display: block;
    max-width: 80px;
    width: 100%;
    height: 1px;
    background: currentColor;
  }
}

.blankCanvasTitle {
  font-size: var(--18px);
  font-weight: 300;
  margin-bottom: 10px;
}

.blankCanvasList {
  display: flex;
  gap: 20px;
  overflow-x: auto;

  padding-inline: var(--padding-x);

  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */

  scroll-timeline: --list-scroll inline;

  &::-webkit-scrollbar {
    display: none;
  }

  &:before,
  &:after {
    content: '';
    position: absolute;
    display: block;
    height: 100%;
    width: calc(6 * var(--padding-x));
    left: 0;
    background: linear-gradient(270deg, transparent 0%, var(--background) 100%);
    pointer-events: none;
    animation: fade;
    animation-timeline: --list-scroll;
    animation-range: 0px 100px;
  }

  &:after {
    left: auto;
    right: 0;
    scale: -1;
    animation-direction: reverse;
    animation-range: calc(100% - 100px) 100%;
  }
}

@keyframes fade {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.listFadeout {
  position: relative;
  margin-inline: calc(-1 * var(--padding-x));
}

.blankCanvasOption {
  --hover-background: rgba(var(--primary-rgb), 0.1);

  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
  gap: 5px;
  padding: 5px 10px;
  height: 100%;
  font-size: var(--13px);
  font-weight: 300;
  border-radius: 5px;
}

.screen {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  border: 1px solid var(--secondary);
  border-radius: 5px;

  background: linear-gradient(
    136deg,
    rgba(var(--secondary-rgb), 0.25) 20%,
    rgba(var(--secondary-rgb), 0.6) 65%,
    rgba(var(--secondary-rgb), 0.25) 85%
  );

  & svg {
    max-width: var(--19px);
    max-height: var(--19px);
    width: 100%;
    height: 100%;
  }
}

